examples/test/testpolicy10246.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10246
  namespace: namespace227
spec:
  podSelector:
    matchLabels:
      key24: value20
      key45: value44
      key39: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value3
      podSelector:
        matchLabels:
          key34: value23
          key10: value11
